# newbar

./: .gitignore  Cargo.toml  README.md  build.rs
src/: audio.c  audio.rs  df.c  df.rs  main.rs  render.rs
src/render/: battery.rs  cpu.rs  disk.rs  mem.rs  time.rs  volume.rs  workspace.rs
