[package]
name = "newbar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.4.0"
libpulse-binding = "2.28.1"
libpulse-simple-binding = "2.28.1"
pulseaudio = "0.2.1"

[build-dependencies]
cc = "1.1.31"

[dependencies.socket2]
version = "0.5.7"
# features = ["unix"]